testsuite/tests/saks/should_fail/saks_fail007.stderr

saks_fail007.hs:7:12: error:
    parse error on input ‘::’ (possibly incorrect indentation or mismatched brackets)
